--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.58.5",
-    "react-native-simple-store": "^1.3.0"
+    "react-native-simple-store": "^1.3.0",
+    "react-native-splash-screen": "^3.2.0"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
