Change the app name to Parity

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ReactNativeDefensePairing",
-  "displayName": "ReactNativeDefensePairing"
+  "name": "ParityHockeyApp",
+  "displayName": "Parity"
 }
