--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,11 @@ build/
 local.properties
 *.iml
 
+# Built application files
+*.apk
+*.ap_
+*.aab
+
 # node.js
 #
 node_modules/
@@ -54,3 +59,4 @@ buck-out/
 
 # Bundle artifact
 *.jsbundle
+
