--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native-gesture-handler": "^1.1.0",
     "react-native-responsive-screen": "^1.2.0",
     "react-native-simple-store": "^1.3.0",
-    "react-native-splash-screen": "^3.2.0"
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^6.4.0"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
