--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "16.6.3",
-    "react-native": "0.58.5",
+    "react": "16.8.3",
+    "react-native": "0.59.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-responsive-screen": "^1.2.0",
     "react-native-simple-store": "^1.3.0",
@@ -17,15 +17,17 @@
     "react-native-vector-icons": "^6.4.0"
   },
   "devDependencies": {
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/core": "^7.3.4",
+    "@babel/runtime": "^7.3.4",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "24.1.0",
+    "babel-jest": "^24.4.0",
     "eslint": "^5.15.2",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-native": "^3.6.0",
-    "jest": "24.1.0",
-    "metro-react-native-babel-preset": "0.52.0",
-    "react-test-renderer": "16.6.3"
+    "jest": "^24.4.0",
+    "metro-react-native-babel-preset": "^0.53.0",
+    "react-native-git-upgrade": "^0.2.7",
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "react-native"
